[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-hub"
version = "0.1.0"
description = "Local-first AI Agent Hub with Streamlit dashboards"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agent_hub = "agent_hub.launcher:main"
priorities = "agent_hub.agents.priorities.cli:app"
gmail-stub = "agent_hub.agents.gmail_stub.cli:app"
briefing = "agent_hub.agents.daily_briefing.cli:app"
pinball = "agent_hub.agents.pinball_tracker.cli:app"
movie = "agent_hub.agents.movie_recommender.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_hub*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: subprocess / end-to-end smoke tests",
]
